# relay-assistant-bot

./: .env.example  .env.ollama.example  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml  requirements.txt  run.sh
.opencode/: opencode.json  opik_mcp.py
.opencode/skills/relay-assistant-overview/: SKILL.md
src/tg_summary_bot/: __main__.py  assistant.py  bot.py  config.py  doctor.py  image_recognizer.py  llm.py  meme_generator.py  memory.py  observability.py  periods.py  storage.py  summarizer.py  transcriber.py  transcript_formatter.py  video_recognizer.py  web_search.py
