[project]
name = "telegram-summary-bot"
version = "0.1.0"
description = "Telegram bot that stores new messages and produces short AI discussion summaries."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.10,<4",
    "aiosqlite>=0.20,<1",
    "httpx>=0.27,<1",
    "openai>=1.40,<2",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.1,<2",
]
voice-cuda = [
    "faster-whisper>=1.1,<2",
    "nvidia-cublas-cu12>=12,<13",
    "nvidia-cudnn-cu12>=9,<10",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
